--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import javax.tools.JavaCompiler
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -19,11 +21,15 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{
+        maven {
             url "https://maven.google.com"
         }
-        
     }
+    /*gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }*/
 }
 
 task clean(type: Delete) {
