--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation 'com.karumi:dexter:6.0.2'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
