--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -50,4 +54,5 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation project(path: ':map')
     implementation project(path: ':bmi')
+    implementation project(path: ':remind')
 }
