--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor">
 
         <activity
             android:name=".MainActivity"
@@ -37,6 +38,7 @@
         <activity android:name=".authentication.CreateAccountActivity" />
         <activity android:name=".authentication.LoginActivity" />
         <activity android:name=".authentication.NewProfileActivity" />
+        <activity android:name=".EcgGraph" android:screenOrientation="landscape"/>
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
