--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.github.smarteist:autoimageslider:1.3.9'
 
     implementation project(path: ':map')
     implementation project(path: ':bmi')
