--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="com.example.dell_pro">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -28,19 +27,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-
-        <activity android:name=".chattingUI.DoctorProfile"
-            android:parentActivityName=".chattingUI.ChatActivity"/>
-
-        <activity android:name=".chattingUI.Chatting"
-            android:parentActivityName=".chattingUI.ChatActivity"/>
-
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".HowToUse"></activity>
+        <activity
+            android:name=".chattingUI.DoctorProfile"
+            android:parentActivityName=".chattingUI.ChatActivity" />
+        <activity
+            android:name=".chattingUI.Chatting"
+            android:parentActivityName=".chattingUI.ChatActivity" />
         <activity
             android:name=".chattingUI.ChatActivity"
-            android:parentActivityName=".MainActivity"/>
-
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/Main" />
