--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".HowToUse"></activity>
+        <activity android:name=".HowToUse"/>
         <activity
             android:name=".chattingUI.DoctorProfile"
             android:parentActivityName=".chattingUI.ChatActivity" />
