--- a/doc/src/main/AndroidManifest.xml
+++ b/doc/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name=".EcgGraph"
+            android:screenOrientation="landscape" />
+
+        <activity android:name=".ReportActivity" />
+
         <activity android:name=".authentication.DocNewProfileActivity" />
 
         <activity android:name=".authentication.DocCreateAccountActivity" />
